--- a/FriendZone.UI/FriendZone.UI.csproj
+++ b/FriendZone.UI/FriendZone.UI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\FriendZone.Entities\FriendZone.Entities.csproj" />
     <ProjectReference Include="..\FriendZone.Models\FriendZone.Models.csproj" />
   </ItemGroup>
